# blockchain

.github/ISSUE_TEMPLATE/: code_example_feedback.yml  documentation_feedback.yml  technical_accuracy.yml  user_experience.yml
blockchain/: Cargo.toml
blockchain/benches/: contract_benchmarks.rs
blockchain/src/: api.rs  block.rs  consensus.rs  crypto.rs  lib.rs  mempool.rs  msg.rs  network.rs  storage.rs  transaction.rs
blockchain/src/contract/: access.rs  governance.rs  mod.rs  registry.rs  standards.rs  state.rs
blockchain/tests/: contract_test.rs  performance_test.rs  rocksdb_test.rs  version_test.rs
blockchain/tests/fixtures/: test_contract.wat
blockchain/tests/fixtures/test_contract/: Cargo.toml
blockchain/tests/fixtures/test_contract/src/: lib.rs
blockchain/tests/fixtures/test_contract_v2/: Cargo.toml
blockchain/tests/fixtures/test_contract_v2/src/: lib.rs
docs/: architecture.md  blockchain_design.md  deployment_guide.md  development_plan.md  error_handling_guide.md  errors  feedback_system.md  next_step.md  registry_guide.md  setup_progress.md  technical_stack.md
docs/change-logs/: Cargo.toml  access.rs  access.rs.md  api.rs  architecture.md  block.rs  blockchain_design.md  consensus.rs  contract.rs  contract_audit.md  contract_benchmarks.rs  contract_mod.rs  contract_mod.rs.md  contract_test.rs  crypto.rs  deployment_guide.md.md  development_plan.md  documentation_review.md  documentation_review.md.md  error_handling_guide.md.md  errors  feedback_system.md.md  github_templates.md  governance.rs  lib.rs  mempool.rs  network.rs  next_step.md  next_step.md.md  performance_test.rs  performance_test.rs.md  project_board_setup.md.md  registry.rs  registry.rs.md  registry_guide.md.md  rocksdb_test.rs  setup_progress.md  standards.rs  state.rs  state.rs.md  (+6 more)
docs/github/: project_board_setup.md
docs/security/: contract_audit.md
test_build/: Cargo.toml
